--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,6 +2,8 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:latest-build AS build
 
 WORKDIR /go/src/github.com/balena-io-projects/app
 
+COPY /app ./
+
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
 #RUN apt-get update && apt-get install -yq \
@@ -11,11 +13,10 @@ WORKDIR /go/src/github.com/balena-io-projects/app
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
 
-# This will copy all files in our root to the working  directory in the container
-COPY . ./
+RUN go build
 
 # Enable systemd init system in container
 ENV INITSYSTEM on
 
-# server.js will run when container starts up on the device
-CMD ["npm", "start"]
+# app.js will run when container starts up on the device
+CMD ./app
