--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,8 +1,6 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:latest-build AS build
 
-WORKDIR /go/src/github.com/balena-io-projects/app
-
-COPY /app ./
+WORKDIR /go/src/github.com/balena-io-projects/app-gpio
 
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
@@ -13,10 +11,14 @@ COPY /app ./
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
 
+# This will copy all files in our root to the working  directory in the container
+COPY . ./
 RUN go build
+
+COPY --from=build /go/src/github.com/balena-io-projects/app-gpio/ .
 
 # Enable systemd init system in container
 ENV INITSYSTEM on
 
 # app.js will run when container starts up on the device
-CMD ./app
+CMD ./
