--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,6 +1,6 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:latest-build AS build
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/
 
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
@@ -9,7 +9,7 @@ WORKDIR /usr/src/app
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm install --production
+RUN npm install --production
 
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
