--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -11,7 +11,7 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:6
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Defines our working directory in container
-WORKDIR /usr/src
+WORKDIR /
 
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
