--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -11,7 +11,7 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:6
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Defines our working directory in container
-WORKDIR /
+WORKDIR /usr/src/app
 
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
@@ -20,8 +20,8 @@ COPY package.json package.json
 # making sure to clean up the artifacts it creates in order to reduce the image size.
 RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf /tmp/*
 
-# This will copy all files in our root to the working  directory in the container
-COPY . ./
+# This will copy all files in our root to the working directory in the container
+COPY . 
 
 # Enable systemd init system in container
 ENV INITSYSTEM on
