--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "preinstall": "bash usr/src/app/deps.sh",
-    "start": "node usr/src/app/app.js"
+    "preinstall": "bash /usr/src/app/deps.sh",
+    "start": "node /usr/src/app/app.js"
   }
 }
