--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "preinstall": "ls",
+    "preinstall": "bash deps.sh",
     "start": "node app.js"
   }
 }
