--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "preinstall": "bash deps.sh",
-    "start": "node app.js"
+    "preinstall": "bash ./deps.sh",
+    "start": "node ./app.js"
   }
 }
