--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "preinstall": "bash ./deps.sh",
-    "start": "node ./app.js"
+    "preinstall": "cd ../",
+    "preinstall": "ls",
+    "preinstall": "bash deps.sh",
+    "start": "node app.js"
   }
 }
